2007-03-04  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Improved find_printer() method. Now
	  searches of make and model names do not consider other characters
	  than letters and numbers any more. All other characters are and
	  boundaries between letters and numbers are converted to single
	  spaces.

2007-03-03  Till Kamppeter <till.kamppeter@gmail.com>

	* debian/control: "gimp-print" -> "gutenprint".

2007-02-28  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added new find_printer() method, to find
	  printer entries in the database based on IEEE-1284 device IDs
	  (from printer auto-detection), make/model, make, or model.
	  This is for a new search function on the site and also for
	  finding driver packages by printer setup tools.

	* foomatic-searchprinter.in, configure.ac, Makefile.in: Added
	  simple tool to find printers in the locally installed
	  Foomatic database using the new find_printer() method.

2007-02-26  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Let "<obsolete>" tags
	  in driver XML files be read and added to the Perl data structures
	  of driver entries, printer/driver combos, and the overview. Let
	  this info also be put into the PPDs and into the "DRV:" field
	  of the device IDs.

2007-02-24  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Let Perl data structure for driver XML
	  files also contain the printer-specific exceptions of the driver
	  functionality data.

2007-02-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Allow specifying
	  manufacturer names along with the "<manufacturersupplied>" tag
	  in the driver XML file. In this case in the PPDs and in the PPD
	  lists the driver is only marked as supplied by the manufacturer
	  if the printer manufacturer's name matches one of the given
	  names. For example if a Brother printer is used with HPIJS, the